@@ -1,3 +1,7 @@
+2005-08-30  Paolo Carlini  <pcarlini@suse.de>
+
+	* testsuite/ext/hash_map/23528.cc: New.
+
 2005-08-29  Paolo Carlini  <pcarlini@suse.de>
 
 	* include/bits/stl_map.h (class map): ... and a missing @a.
